@feature/ SearchForm Component Design

--- a/react-frontend/index.html
+++ b/react-frontend/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" sizes="48x48"
+    href="https://assets-global.website-files.com/605b962d5e846a3de31701a8/648b2a909901e175cf6bac04_favicon-48x48.png">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Case Técnico BrandMonitor</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
